# RealsenseRecord

./: .gitignore  CMakeLists.txt  CV_Helpers.cpp  CV_Helpers.h  README.md  WHATHERE  d435.h  example.hpp  helpers.cpp  helpers.h  my_rs_motion.cpp  realsense_advanced_config.cpp  record_IMU_as_R.cpp  roboslam_realsense.cpp  roboslam_realsense.h  rs_async.cpp  rs_async_RGBDAccRot_synced.cpp  rs_async_drop_RGBDIMU.cpp  rs_pipeline_group_frame.cpp
.kdev4/: test_real.kdev4
Docker/: Dockerfile  README.md  build.sh  run.sh
Docker/data/: acc.txt  depth.txt  gyr.txt  rgb.intrinsics  rgb.txt
Docker/libraries/: libopencv_highgui.so.4.5.5  libopencv_imgcodecs.so.4.5.5
Docker/recorder/: rs_async_drop_RGBDIMU
ROS/: README.md
ROS/realsense_record_publisher/: CMakeLists.txt  README.md  package.xml
ROS/realsense_record_publisher/include/realsense_record_publisher/: indexer.h  realsense_record_publisher.h
ROS/realsense_record_publisher/launch/: realsense_record_publisher.launch
ROS/realsense_record_publisher/scripts/: assoc_rgbdi.py
ROS/realsense_record_publisher/src/: realsense_record_publisher.cpp
ROS2/realsense_record_publisher/: CMakeLists.txt  README.md  package.xml
ROS2/realsense_record_publisher/include/realsense_record_publisher/: index_reader.h  realsense_record_publisher.h
ROS2/realsense_record_publisher/launch/: realsense_record_publisher_launch.py
ROS2/realsense_record_publisher/src/: listener.cpp  realsense_record_publisher.cpp
Results/: README.md
configs/: high_density.json
scripts/evaluation/EVO/: align_data (original).m  align_data.m  align_data_octave.m  eval_evo.sh  quick_eval.sh  whathere
scripts/evaluation/ORBSLAM/Other/: convert_RR_to_TUM_obsolete.sh  do_in_dir_copy_results.sh  do_in_dir_remove_results.sh
scripts/evaluation/ORBSLAM/RGBD/: README.md  TUM.yaml  convert_RR_to_TUM.sh  evaluate_all_sequences.sh  evaluate_one_sequence.sh  run_orb.sh
scripts/evaluation/ORBSLAM/RGBDIMU/: README.md  TUM.yaml  convert_RR_to_TUM.sh  evaluate_all_sequences.sh  evaluate_one_sequence.sh  run_orb.sh
scripts/evaluation/ORBSLAM/helpers/: associate_rgbd.py  associate_rgbdi.py  change_intrinsics.sh  evaluate.sh
scripts/evaluation/ORBSLAM2/: README.md  TUM1.yaml  associate_script.sh  change_intrinsics.sh  convert_RR_to_TUM.sh  do_in_dir_remove_results.sh  eval_all.sh  evaluate.sh  evaluate_one.sh  run_evaluation_pipeline.sh  run_local_evaluation.sh  run_orb2.sh  run_remote2local_evaluation_pipeline.sh
scripts/evaluation/RGB-D/: align_data.m  eval_rgbd.sh  evaluate2.py  original_ate.py  whathere
scripts/installation/: install_ocv4_18.sh  install_realsenseSDK.sh  install_realsense_calibrationtool.sh  setup.sh
scripts/postprocess/: assoc_rgbdi.py  associate.sh  associate_all.sh  store_calibration.sh
